--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
-    id 'com.gluonhq.client-gradle-plugin' version '0.1.36'  //requires GraalVM 21+
+    id 'org.openjfx.javafxplugin' version '0.0.9'  //requires JDK11+
+    id 'com.gluonhq.client-gradle-plugin' version '0.1.39'  //requires GraalVM 21.1+
 }
 
 wrapper {
@@ -16,7 +17,7 @@ ext {
     lwjglVersion = '3.3.0-SNAPSHOT'
     jomlVersion = '1.10.1'
     swtVersion = '4.6.1'
-    graalvmVersion = '21.0.0.2'
+    graalvmVersion = '21.1.0'
 
     //LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan
     lwjglModules = [
@@ -24,7 +25,7 @@ ext {
         'lwjgl-bgfx',                                  //for BGFX demos
         'lwjgl-cuda',                                  //for CUDA demos (require NVIDIA hardware)
         'lwjgl-jemalloc', 'lwjgl-par',                 //utilities
-        'lwjgl-shaderc', 'lwjgl-vma', 'lwjgl-vulkan',  //for Vulkan demos (require discrete GPU with supporting driver)
+        'lwjgl-shaderc', 'lwjgl-vma', 'lwjgl-vulkan',  //for Vulkan demos (require discrete GPU with Vulkan driver)
     ]
 
     mainClassName = 'org.lwjgl.demo.DemoLauncher'
