--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,22 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'  //requires JDK11+
-    id 'com.gluonhq.client-gradle-plugin' version '0.1.39'  //requires GraalVM 21.1+
+    id 'org.mikeneck.graalvm-native-image' version '1.4.1'
 }
 
 wrapper {
-    gradleVersion = '6.8.3'
+    gradleVersion = '7.1.1'
     distributionType = Wrapper.DistributionType.ALL
 }
 
 group = 'org.lwjgl'
 description = 'LWJGL3 demos with native image by GraalVM'
-//version = '0.0.1-SNAPSHOT'
+version = '3.3.0-SNAPSHOT'
 
 ext {
-    lwjglVersion = '3.3.0-SNAPSHOT'
+    lwjglVersion = project.version
     jomlVersion = '1.10.1'
     swtVersion = '4.6.1'
-    graalvmVersion = '21.1.0'
+    graalvmVersion = '21.2.0'
 
     //LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan
     lwjglModules = [
@@ -29,6 +28,8 @@ ext {
     ]
 
     mainClassName = 'org.lwjgl.demo.DemoLauncher'
+    currentPlatform = getCurrentPlatform()
+    nativeImageDirName = "native-image-$currentPlatform"
 }
 
 repositories {
@@ -57,10 +58,8 @@ dependencies {
     //for compiling GraalVM substitution classes
     compileOnly "org.graalvm.nativeimage:svm:$graalvmVersion"
 
-    def currentOS = getCurrentPlatform()
-
     //OS-specific SWT library (64-bit Intel/AMD hardware only)
-    switch (currentOS) {
+    switch (currentPlatform) {
         case 'linux':
             implementation "org.eclipse.swt:org.eclipse.swt.gtk.linux.x86_64:$swtVersion"
             break
@@ -83,12 +82,12 @@ dependencies {
         if (it != 'lwjgl-cuda' && it != 'lwjgl-egl') { //cuda, egl have no native modules
             //use natives for 64-bit Intel/AMD platforms only
             if (it == 'lwjgl-vulkan') {
-                if (currentOS == 'macos') {
+                if (currentPlatform == 'macos') {
                     //Vulkan natives exist for Mac OSX only
-                    runtimeOnly "org.lwjgl:$it::natives-$currentOS"
+                    runtimeOnly "org.lwjgl:$it::natives-$currentPlatform"
                 }
             } else {
-                runtimeOnly "org.lwjgl:$it::natives-$currentOS"
+                runtimeOnly "org.lwjgl:$it::natives-$currentPlatform"
             }
         }
     }
@@ -100,7 +99,7 @@ sourceSets {
             srcDirs = ['src']
         }
         resources {
-            srcDirs = ['res']
+            srcDirs = ['res', "graal-cfg/$currentPlatform"]
         }
     }
 }
@@ -127,15 +126,33 @@ run {
     //use the following jvmArgs for as many different run scenarios as possible,
     //and for all the code-execution paths as much as possible,
     //to generate (or merge with) the GraalVM native-image configuration files
-    //in the res/META-INF/native-image directory.
+    //in the graal-cfg/$currentPlatform/META-INF/native-image directory.
     //This directory is read by GraalVM during the native-image build.
 
-    //jvmArgs = ["-agentlib:native-image-agent=config-merge-dir=res/META-INF/native-image"]
+    //jvmArgs = ["-agentlib:native-image-agent=config-merge-dir=graal-cfg/$currentPlatform/META-INF/native-image"]
 }
 
-gluonClient {
-    compilerArgs = [
-        '--initialize-at-run-time=org.lwjgl',
-        '--report-unsupported-elements-at-runtime',
-    ]
+nativeImage {
+    graalVmHome = System.getProperty('java.home')
+    buildType { org.mikeneck.graalvm.BuildTypeSelector build ->
+        build.executable {
+            main = project.mainClassName
+        }
+    }
+    executableName = project.name
+    outputDirectory = file("$buildDir/$nativeImageDirName")
+
+    arguments {
+        add '--no-fallback'
+        add '--initialize-at-run-time=org.lwjgl'
+        add '--native-image-info'
+        add '--verbose'
+        //add '-H:+TraceNativeToolUsage'
+        add "-H:TempDirectory=$buildDir/tmp/$nativeImageDirName"
+    }
 }
+
+generateNativeImageConfig {
+    enabled = false
+}
+
