--- a/graal-cfg/linux/META-INF/native-image/jni-config.json
+++ b/graal-cfg/linux/META-INF/native-image/jni-config.json
@@ -1,5 +1,18 @@
 [
 {
+  "name":"java.lang.ClassLoader",
+  "methods":[
+    {"name":"getPlatformClassLoader","parameterTypes":[] }, 
+    {"name":"loadClass","parameterTypes":["java.lang.String"] }
+  ]
+},
+{
+  "name":"java.lang.NoSuchMethodError"
+},
+{
+  "name":"jdk.internal.loader.ClassLoaders$PlatformClassLoader"
+},
+{
   "name":"org.eclipse.swt.graphics.Device",
   "methods":[{"name":"logProc","parameterTypes":["long","long","long","long"] }]
 },
@@ -256,5 +269,13 @@
     {"name":"windowProc","parameterTypes":["long","long","long","long","long"] }, 
     {"name":"windowTimerProc","parameterTypes":["long"] }
   ]
+},
+{
+  "name":"org.graalvm.nativebridge.jni.JNIExceptionWrapperEntryPoints",
+  "methods":[{"name":"getClassName","parameterTypes":["java.lang.Class"] }]
+},
+{
+  "name":"org.lwjgl.system.CallbackI",
+  "methods":[{"name":"callback","parameterTypes":["long","long"] }]
 }
 ]
