--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.lwjgl</groupId>
     <artifactId>lwjgl3-demos</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>3.3.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <lwjgl.version>3.3.0-SNAPSHOT</lwjgl.version>
+        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <lwjgl.version>${project.version}</lwjgl.version>
         <swt.version>4.6.1</swt.version>
         <joml.version>1.10.1</joml.version>
-        <client-maven-plugin.version>0.1.39</client-maven-plugin.version>
-        <graalvm.version>21.1.0</graalvm.version>
+        <native.maven.plugin.version>0.9.2</native.maven.plugin.version>
+        <native.image.dir.name>native-image-${platform}</native.image.dir.name>
+        <graalvm.version>21.2.0</graalvm.version>
         <exec.mainClass>org.lwjgl.demo.DemoLauncher</exec.mainClass>
         <!-- Can be overwritten via -D property during mvn invoke to specify a different demo.
              The package "org.lwjgl.demo." is prepended automatically. -->
@@ -121,11 +122,15 @@
             <resource>
                 <directory>res</directory>
             </resource>
+            <!-- include the GraalVM native-image configuration files -->
+            <resource>
+                <directory>graal-cfg/${platform}</directory>
+            </resource>
         </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
+                <version>${maven.compiler.plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -142,7 +147,7 @@
                     <executable>java</executable>
                     <arguments>
                         <!-- GraalVM's agent to generate (or merge with) native-image configuration files -->
-                        <!-- argument>-agentlib:native-image-agent=config-merge-dir=res/META-INF/native-image</argument -->
+                        <!-- argument>-agentlib:native-image-agent=config-merge-dir=graal-cfg/${platform}/META-INF/native-image</argument -->
                         <argument>${sys.props}</argument>
                         <argument>-classpath</argument>
                         <classpath/>
@@ -152,14 +157,38 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.gluonhq</groupId>
-                <artifactId>client-maven-plugin</artifactId>
-                <version>${client-maven-plugin.version}</version>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+                <version>${native.maven.plugin.version}</version>
+                <executions>
+                    <!-- execution>
+                        <id>test-native</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <phase>test</phase>
+                    </execution -->
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
+                    <!-- outputDir>${project.build.directory}/${native.image.dir.name}</outputDir -->
+                    <imageName>${project.name}</imageName>
                     <mainClass>${exec.mainClass}</mainClass>
-                    <nativeImageArgs>
-                        <nativeImageArg>--initialize-at-run-time=org.lwjgl</nativeImageArg>
-                    </nativeImageArgs>
+                    <buildArgs>
+                        <buildArg>--no-fallback</buildArg>
+                        <buildArg>--initialize-at-run-time=org.lwjgl</buildArg>
+                        <buildArg>--native-image-info</buildArg>
+                        <buildArg>--verbose</buildArg>
+                        <!-- buildArg>-H:+TraceNativeToolUsage</buildArg -->
+                        <buildArg>-H:TempDirectory=${project.build.directory}/tmp/${native.image.dir.name}</buildArg>
+                        <buildArg>-H:Path=${project.build.directory}/${native.image.dir.name}</buildArg>
+                    </buildArgs>
+                    <skip>false</skip>
                 </configuration>
             </plugin>
         </plugins>
