--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,31 @@
                     <skip>false</skip>
                 </configuration>
             </plugin>
+            <!-- remove unneeded .dll files -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>remove-unneeded-dll-files</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <target>
+                        <move todir="${project.build.directory}/tmp/${native.image.dir.name}">
+                            <fileset dir="${project.build.directory}/${native.image.dir.name}">
+                                <include name="*.dll"/>
+                                <include name="*.txt"/>
+                            </fileset>
+                        </move>
+                    </target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <repositories>
