--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 wrapper {
-    gradleVersion = '7.1.1'
+    gradleVersion = '7.2'
     distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -15,7 +15,7 @@ version = '3.3.0-SNAPSHOT'
 ext {
     lwjglVersion = project.version
     jomlVersion = '1.10.1'
-    swtVersion = '4.6.1'
+    swtMavenVersion = '3.105.3'  //contains Eclipse SWT 4.6.2.9 software
     graalvmVersion = '21.2.0'
 
     //LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan
@@ -42,15 +42,11 @@ repositories {
 
 //detect the OS (assuming 64-bit, on Intel/AMD hardware)
 private static String getCurrentPlatform() {
-    def currentOS = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem;
-    if (currentOS.isWindows()) {
-        return 'windows'
-    } else if (currentOS.isLinux()) {
-        return 'linux'
-    } else if (currentOS.isMacOsX()) {
-        return 'macos'
-    }
-    return 'unknown'
+    def currentOS = org.gradle.internal.os.OperatingSystem.current()
+    return currentOS.isLinux() ? 'linux' :
+           currentOS.isMacOsX() ? 'macos' :
+           currentOS.isWindows() ? 'windows' :
+           'unknown'
 }
 
 dependencies {
@@ -61,13 +57,19 @@ dependencies {
     //OS-specific SWT library (64-bit Intel/AMD hardware only)
     switch (currentPlatform) {
         case 'linux':
-            implementation "org.eclipse.swt:org.eclipse.swt.gtk.linux.x86_64:$swtVersion"
+            implementation("org.eclipse.platform:org.eclipse.swt.gtk.linux.x86_64:$swtMavenVersion") {
+                exclude group: 'org.eclipse.platform', module: 'org.eclipse.swt'
+            }
             break
         case 'macos':
-            implementation "org.eclipse.swt:org.eclipse.swt.cocoa.macosx.x86_64:$swtVersion"
+            implementation("org.eclipse.platform:org.eclipse.swt.cocoa.macosx.x86_64:$swtMavenVersion") {
+                exclude group: 'org.eclipse.platform', module: 'org.eclipse.swt'
+            }
             break
         case 'windows':
-            implementation "org.eclipse.swt:org.eclipse.swt.win32.win32.x86_64:$swtVersion"
+            implementation("org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:$swtMavenVersion") {
+                exclude group: 'org.eclipse.platform', module: 'org.eclipse.swt'
+            }
             break
         default:
             throw new GradleException('Unknown OS: ' + currentPlatform)
