--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     </properties>
     <name>lwjgl3-demos</name> <!-- name of the resulting native executable -->
     <description>LWJGL3 demos with native image by GraalVM</description>
+
     <profiles>
         <profile>
             <id>windows</id>
@@ -135,6 +136,7 @@
             </dependencies>
         </profile>
     </profiles>
+
     <build>
         <sourceDirectory>src</sourceDirectory>
         <resources>
@@ -175,7 +177,34 @@
                     </arguments>
                 </configuration>
             </plugin>
+            <!-- extract the LWJGL manifest file -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.lwjgl</groupId>
+                                    <artifactId>lwjgl</artifactId>
+                                    <outputDirectory>${project.build.directory}/tmp/lwjglCoreArchive</outputDirectory>
+                                    <includes>META-INF/MANIFEST.MF</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- create the uber jar with all dependencies -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>${maven.shade.plugin.version}</version>
                 <executions>
@@ -185,13 +214,32 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>no-deps-${platform}</shadedClassifierName>
+                            <filters>
+                                <filter>
+                                    <!-- Exclude files that sign a jar -->
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                             <transformers>
+                                <!-- exclude any other manifest files -->
                                 <transformer
-                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>${exec.mainClass}</mainClass>
+                                    implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+                                    <resource>MANIFEST.MF</resource>
+                                </transformer>
+                                <!-- include the LWJGL manifest file in the uber jar -->
+                                <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>META-INF/MANIFEST.MF</resource>
+                                    <file>${project.build.directory}/tmp/lwjglCoreArchive/META-INF/MANIFEST.MF</file>
                                 </transformer>
                             </transformers>
-                            <finalName>lwjgl3-demos</finalName>
                         </configuration>
                     </execution>
                 </executions>
@@ -229,6 +277,14 @@
                         <buildArg>-H:Path=${project.build.directory}/${native.image.dir.name}</buildArg>
                     </buildArgs>
                     <skip>false</skip>
+                    <!-- use the uber jar for native image compiling 
+                         if long classpath is a problem in Windows
+                    -->
+                    <!-- classpath>
+                        <param>
+                            ${project.build.directory}/${project.artifactId}-${project.version}-no-deps-${platform}.jar
+                        </param>
+                    </classpath -->
                 </configuration>
             </plugin>
             <!-- remove unneeded .dll/.txt files -->
@@ -258,6 +314,7 @@
             </plugin>
         </plugins>
     </build>
+
     <repositories>
         <repository>
             <id>oss.sonatype.org</id>
@@ -267,6 +324,7 @@
             </snapshots>
         </repository>
     </repositories>
+
     <dependencyManagement>
         <dependencies>
             <!-- get recommended dependency versions from the LWJGL BOM -->
