--- a/graal-cfg/macos/META-INF/native-image/resource-config.json
+++ b/graal-cfg/macos/META-INF/native-image/resource-config.json
@@ -1,6 +1,19 @@
 {
   "resources":{
   "includes":[
+    {"pattern":"\\Qmacos/x64/org/lwjgl/assimp/libassimp.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/bgfx/libbgfx.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/glfw/libglfw.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/jemalloc/libjemalloc.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/liblwjgl.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/openal/libopenal.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/opengl/liblwjgl_opengl.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/par/liblwjgl_par.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/shaderc/libshaderc.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/shaderc/libshaderc_spvc.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/stb/liblwjgl_stb.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/vma/liblwjgl_vma.dylib\\E"}, 
+    {"pattern":"\\Qmacos/x64/org/lwjgl/vulkan/libMoltenVK.dylib\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/bgfx/shaders/dx11/fs_bump.bin\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/bgfx/shaders/dx11/fs_cubes.bin\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/bgfx/shaders/dx11/fs_raymarching.bin\\E"}, 
@@ -312,21 +325,7 @@
     {"pattern":"\\Qorg/lwjgl/demo/vulkan/triangle.frag\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/vulkan/triangle.vert\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/vulkan/twoRotatingTriangles.frag\\E"}, 
-    {"pattern":"\\Qorg/lwjgl/demo/vulkan/twoRotatingTriangles.vert\\E"}, 
-    {"pattern":"\\Qswt-wgl-win32-4629.dll\\E"}, 
-    {"pattern":"\\Qswt-win32-4629.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/assimp/assimp.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/bgfx/bgfx.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/glfw/glfw.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/jemalloc/jemalloc.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/lwjgl.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/openal/OpenAL.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/opengl/lwjgl_opengl.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/par/lwjgl_par.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/shaderc/shaderc.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/shaderc/shaderc_spvc.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/stb/lwjgl_stb.dll\\E"}, 
-    {"pattern":"\\Qwindows/x64/org/lwjgl/vma/lwjgl_vma.dll\\E"}
+    {"pattern":"\\Qorg/lwjgl/demo/vulkan/twoRotatingTriangles.vert\\E"}
   ]},
   "bundles":[]
 }
