update native config files with SdfBricks demo

--- a/graal-cfg/linux/META-INF/native-image/reflect-config.json
+++ b/graal-cfg/linux/META-INF/native-image/reflect-config.json
@@ -889,7 +889,7 @@
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 },
 {
-  "name":"org.lwjgl.demo.vulkan.raytracing.SignedDistanceCubes",
+  "name":"org.lwjgl.demo.vulkan.raytracing.SdfBricks",
   "methods":[{"name":"main","parameterTypes":["java.lang.String[]"] }]
 },
 {
