--- a/graal-cfg/windows/META-INF/native-image/resource-config.json
+++ b/graal-cfg/windows/META-INF/native-image/resource-config.json
@@ -202,6 +202,9 @@
     {"pattern":"\\Qorg/lwjgl/demo/opengl/raytracing/voxellightmapping2/raster.fs.glsl\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/opengl/raytracing/voxellightmapping2/raster.vs.glsl\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/opengl/raytracing/voxellightmapping2/trace.glsl\\E"}, 
+    {"pattern":"\\Qorg/lwjgl/demo/opengl/shader/downsampling/downsample.cs.glsl\\E"}, 
+    {"pattern":"\\Qorg/lwjgl/demo/opengl/shader/downsampling/quad.fs.glsl\\E"}, 
+    {"pattern":"\\Qorg/lwjgl/demo/opengl/shader/downsampling/quad.vs.glsl\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/opengl/shader/gameoflife/25p3h1v0.1.png\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/opengl/shader/gameoflife/25p3h1v0.2.png\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/opengl/shader/gameoflife/30p5h2v0.png\\E"}, 
